# AI-Free-Flow-Builder

./: .gitignore  README.md  backend_test.py  design_guidelines.json  render.yaml
.emergent/: emergent.yml
backend/: .env  .env.example  requirements.txt  server.py
frontend/: .env  .env.example  package-lock.json  package.json
frontend/plugins/visual-edits/: dev-server-setup.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/builder/: Canvas.js  ElementRenderer.js  PropertiesPanel.js  Sidebar.js  Toolbar.js
frontend/src/context/: BuilderContext.js
frontend/src/lib/: rustCanvasEngine.js
frontend/src/pages/: BuilderPage.js  PromptPage.js
frontend/src/utils/: exportUtils.js  importPageJson.js  responsiveLayout.js  starterPages.js
memory/: PRD.md
rust/: Cargo.toml
rust/ffb_canvas_engine/: Cargo.toml
rust/ffb_canvas_engine/src/: lib.rs
rust/ffb_publish_renderer/: Cargo.toml
rust/ffb_publish_renderer/src/: lib.rs
rust/ffb_schema_core/: Cargo.toml
rust/ffb_schema_core/src/: lib.rs
scripts/: build-rust-wasm.sh
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json
