[workspace]
members = [
  "ffb_canvas_engine",
  "ffb_schema_core",
  "ffb_publish_renderer",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Zoho Landing Pages Team"]

[workspace.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
